--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           hasStatuses, statusCount, statuses,
         };
         localStorage.setItem("ctg_state_v1", JSON.stringify(payload));
-      }, [name, quote, role, survivorType, killerStyle, cost, description, difficulty, stats, hasPassive, passiveName, passiveDesc, m1Name, m1CD, m1Desc, abilityCount, abilities, hasStatuses, statusCount, statuses]);
+      }, [name, quote, role, survivorType, killerStyle, cost, description, difficulty, stats, hasPassive, passiveName, passiveDesc, m1Name, m1CD, m1Desc, m1Windup, m1Damage, m1Linger, abilityCount, abilities, hasStatuses, statusCount, statuses]);
 
       const stars = useMemo(() => "★★★★★".slice(0, Math.max(1, Math.min(5, Number(difficulty) || 1)))
         + "☆☆☆☆☆".slice(0, 5 - Math.max(1, Math.min(5, Number(difficulty) || 1))), [difficulty]);
@@ -209,7 +209,6 @@
         nl(`Walkspeed - ${stats.walkspeed}`);
         nl(`Runspeed - ${stats.sprintspeed}`);
         if (role === 'Killer') nl(`Terror radius (studs) - ${stats.terror}`);
-        if (role === 'Killer') nl(`Terror radius (studs) - ${stats.terror}`);
         nl("");
         nl("Passives");
         if (hasPassive) {
@@ -226,10 +225,6 @@
           nl(`Windup - ${m1Windup}s`);
           nl(`Damage - ${m1Damage}`);
           nl(`Linger - ${m1Linger}s`);
-          nl(m1Desc || "What the thing does");
-          nl("");
-        } (for killers)`);
-          nl(`CD - ${m1CD || 2}s`);
           nl(m1Desc || "What the thing does");
           nl("");
         }
@@ -249,7 +244,7 @@
           });
         }
         return lines.join("\n");
-      }, [name, quote, cost, role, survivorType, killerStyle, description, stars, stats, hasPassive, passiveName, passiveDesc, m1Name, m1CD, m1Desc, trimmedAbilities, hasStatuses, statuses]);
+      }, [name, quote, cost, role, survivorType, killerStyle, description, stars, stats, hasPassive, passiveName, passiveDesc, m1Name, m1CD, m1Desc, m1Windup, m1Damage, m1Linger, trimmedAbilities, hasStatuses, statuses]);
 
       const outputHTML = useMemo(() => {
         const esc = (s) => String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
@@ -302,9 +297,8 @@
             p(esc(s.desc || 'Description of status effect'));
           });
         }
-        return parts.join('
-');
-      }, [name, quote, cost, role, survivorType, killerStyle, description, stars, stats, hasPassive, passiveName, passiveDesc, m1Name, m1CD, m1Desc, trimmedAbilities, hasStatuses, statuses]);
+        return parts.join('\n');
+      }, [name, quote, cost, role, survivorType, killerStyle, description, stars, stats, hasPassive, passiveName, passiveDesc, m1Name, m1CD, m1Desc, m1Windup, m1Damage, m1Linger, trimmedAbilities, hasStatuses, statuses]);
 
       const outputMD = useMemo(() => {
         const lines = [];
@@ -327,6 +321,7 @@
         nl(`Stamina drain per second - ${stats.staminaDrain}`);
         nl(`Walkspeed - ${stats.walkspeed}`);
         nl(`Runspeed - ${stats.sprintspeed}`);
+        if (role === 'Killer') nl(`Terror radius (studs) - ${stats.terror}`);
         nl('');
         nl('Passives');
         if (hasPassive) {
@@ -361,17 +356,15 @@
             nl(`${s.desc || 'Description of status effect'}`);
           });
         }
-        return lines.join('
-');
-      }, [name, quote, cost, role, survivorType, killerStyle, description, stars, stats, hasPassive, passiveName, passiveDesc, m1Name, m1CD, m1Desc, trimmedAbilities, hasStatuses, statuses]);
+        return lines.join('\n');
+      }, [name, quote, cost, role, survivorType, killerStyle, description, stars, stats, hasPassive, passiveName, passiveDesc, m1Name, m1CD, m1Desc, m1Windup, m1Damage, m1Linger, trimmedAbilities, hasStatuses, statuses]);
 
       function updateStat(key, value) {
         setStats(prev => ({ ...prev, [key]: value }));
       }
 
       function handleAbilityChange(index, field, value) {
-        setAbilities(prev => prev.map((a, i) => i === index ? { ...a, [field]: value } : a));
-      } : a));
+        setAbilities(prev => prev.map((a, i) => (i === index ? { ...a, [field]: value } : a)));
       }
 
       function copyToClipboard() {
@@ -426,9 +419,9 @@
         setName(""); setQuote(""); setRole("Survivor"); setSurvivorType("Sustain"); setKillerStyle("Rushdown");
         setCost(0); setDescription(""); setDifficulty(3); setStats(survivorDefaults);
         setHasPassive(false); setPassiveName(""); setPassiveDesc("");
-        setM1Name(""); setM1CD(2); setM1Desc("");
+        setM1Name(""); setM1CD(2); setM1Desc(""); setM1Windup(0.2); setM1Damage(20); setM1Linger(0.25);
         setAbilityCount(1);
-        setAbilities(abilityLabels.map((k) => ({ key: k, name: "", cd: "", desc: "" })));
+        setAbilities(abilityLabels.map((k) => ({ key: k, name: "", cd: "", desc: "", hasDamage: false, damage: 0 })));
         setHasStatuses(false); setStatusCount(1); setStatuses([{ name: "", desc: "" }]);
         localStorage.removeItem("ctg_state_v1");
       }
@@ -453,7 +446,7 @@
                   <input type="number" min="0" className="border rounded-lg px-3 py-2" value={cost} onChange={e=>setCost(Number(e.target.value))} />
                 </L>
                 <L label="Role">
-                  <select className=\"border rounded-lg px-3 py-2\" value={role} onChange={e=>{ const r = e.target.value; setRole(r); setStats(r === 'Survivor' ? survivorDefaults : killerDefaults); }}>
+                  <select className="border rounded-lg px-3 py-2" value={role} onChange={e=>{ const r = e.target.value; setRole(r); setStats(r === 'Survivor' ? survivorDefaults : killerDefaults); }}>
                     <option>Survivor</option>
                     <option>Killer</option>
                   </select>
@@ -473,7 +466,7 @@
 
             <Section title="Description & Difficulty">
               <L label="Description">
-                <textarea className=\"border rounded-lg px-3 py-2 min-h-[240px] md:min-h-[280px]\" value={description} onChange={e=>setDescription(e.target.value)} placeholder="Brief description" />
+                <textarea className="border rounded-lg px-3 py-2 min-h-[240px] md:min-h-[280px]" value={description} onChange={e=>setDescription(e.target.value)} placeholder="Brief description" />
               </L>
               <div className="flex items-center gap-4">
                 <L label={`Difficulty (${difficulty} star${difficulty==1?'':'s'})`}>
@@ -484,28 +477,28 @@
             </Section>
 
             <Section title="Core Stats (with defaults)">
-              <div className=\"grid md:grid-cols-3 gap-4\">
-                <L label=\"Health (default varies by role)\">
-                  <input type=\"number\" className=\"border rounded-lg px-3 py-2\" value={stats.health} onChange={e=>updateStat('health', Number(e.target.value))} />
+              <div className="grid md:grid-cols-3 gap-4">
+                <L label="Health (default varies by role)">
+                  <input type="number" className="border rounded-lg px-3 py-2" value={stats.health} onChange={e=>updateStat('health', Number(e.target.value))} />
                 </L>
-                <L label=\"Stamina (default varies by role)\">
-                  <input type=\"number\" className=\"border rounded-lg px-3 py-2\" value={stats.stamina} onChange={e=>updateStat('stamina', Number(e.target.value))} />
+                <L label="Stamina (default varies by role)">
+                  <input type="number" className="border rounded-lg px-3 py-2" value={stats.stamina} onChange={e=>updateStat('stamina', Number(e.target.value))} />
                 </L>
-                <L label=\"Stamina gain/sec (default varies by role)\">
-                  <input type=\"number\" step=\"0.1\" className=\"border rounded-lg px-3 py-2\" value={stats.staminaGain} onChange={e=>updateStat('staminaGain', Number(e.target.value))} />
+                <L label="Stamina gain/sec (default varies by role)">
+                  <input type="number" step="0.1" className="border rounded-lg px-3 py-2" value={stats.staminaGain} onChange={e=>updateStat('staminaGain', Number(e.target.value))} />
                 </L>
-                <L label=\"Stamina drain/sec (default varies by role)\">
-                  <input type=\"number\" step=\"0.1\" className=\"border rounded-lg px-3 py-2\" value={stats.staminaDrain} onChange={e=>updateStat('staminaDrain', Number(e.target.value))} />
+                <L label="Stamina drain/sec (default varies by role)">
+                  <input type="number" step="0.1" className="border rounded-lg px-3 py-2" value={stats.staminaDrain} onChange={e=>updateStat('staminaDrain', Number(e.target.value))} />
                 </L>
-                <L label=\"Walkspeed (default varies by role)\">
-                  <input type=\"number\" step=\"0.1\" className=\"border rounded-lg px-3 py-2\" value={stats.walkspeed} onChange={e=>updateStat('walkspeed', Number(e.target.value))} />
+                <L label="Walkspeed (default varies by role)">
+                  <input type="number" step="0.1" className="border rounded-lg px-3 py-2" value={stats.walkspeed} onChange={e=>updateStat('walkspeed', Number(e.target.value))} />
                 </L>
-                <L label=\"Sprint speed (default varies by role)\">
-                  <input type=\"number\" step=\"0.1\" className=\"border rounded-lg px-3 py-2\" value={stats.sprintspeed} onChange={e=>updateStat('sprintspeed', Number(e.target.value))} />
+                <L label="Sprint speed (default varies by role)">
+                  <input type="number" step="0.1" className="border rounded-lg px-3 py-2" value={stats.sprintspeed} onChange={e=>updateStat('sprintspeed', Number(e.target.value))} />
                 </L>
                 {role === 'Killer' && (
-                  <L label=\"Terror radius (studs) (default 60)\">
-                    <input type=\"number\" step=\"1\" className=\"border rounded-lg px-3 py-2\" value={stats.terror} onChange={e=>updateStat('terror', Number(e.target.value))} />
+                  <L label="Terror radius (studs) (default 60)">
+                    <input type="number" step="1" className="border rounded-lg px-3 py-2" value={stats.terror} onChange={e=>updateStat('terror', Number(e.target.value))} />
                   </L>
                 )}
               </div>
@@ -525,22 +518,22 @@
             </Section>
 
             {role === 'Killer' && (
-              <Section title=\"M1 Attack (Killers)\">
-                <div className=\"grid md:grid-cols-5 gap-4\">
-                  <L label=\"M1 Name\"><input className=\"border rounded-lg px-3 py-2\" value={m1Name} onChange={e=>setM1Name(e.target.value)} /></L>
-                  <L label=\"Cooldown (s)\" help=\"Default 2s\">
-                    <input type=\"number\" step=\"0.1\" className=\"border rounded-lg px-3 py-2\" value={m1CD} onChange={e=>setM1CD(Number(e.target.value))} />
+              <Section title="M1 Attack (Killers)">
+                <div className="grid md:grid-cols-5 gap-4">
+                  <L label="M1 Name"><input className="border rounded-lg px-3 py-2" value={m1Name} onChange={e=>setM1Name(e.target.value)} /></L>
+                  <L label="Cooldown (s)" help="Default 2s">
+                    <input type="number" step="0.1" className="border rounded-lg px-3 py-2" value={m1CD} onChange={e=>setM1CD(Number(e.target.value))} />
                   </L>
-                  <L label=\"Windup (s)\" help=\"Default 0.2s\">
-                    <input type=\"number\" step=\"0.05\" className=\"border rounded-lg px-3 py-2\" value={m1Windup} onChange={e=>setM1Windup(Number(e.target.value))} />
+                  <L label="Windup (s)" help="Default 0.2s">
+                    <input type="number" step="0.05" className="border rounded-lg px-3 py-2" value={m1Windup} onChange={e=>setM1Windup(Number(e.target.value))} />
                   </L>
-                  <L label=\"Damage\" help=\"Default 20\">
-                    <input type=\"number\" step=\"1\" className=\"border rounded-lg px-3 py-2\" value={m1Damage} onChange={e=>setM1Damage(Number(e.target.value))} />
+                  <L label="Damage" help="Default 20">
+                    <input type="number" step="1" className="border rounded-lg px-3 py-2" value={m1Damage} onChange={e=>setM1Damage(Number(e.target.value))} />
                   </L>
-                  <L label=\"Linger (s)\" help=\"Default 0.25s\">
-                    <input type=\"number\" step=\"0.05\" className=\"border rounded-lg px-3 py-2\" value={m1Linger} onChange={e=>setM1Linger(Number(e.target.value))} />
+                  <L label="Linger (s)" help="Default 0.25s">
+                    <input type="number" step="0.05" className="border rounded-lg px-3 py-2" value={m1Linger} onChange={e=>setM1Linger(Number(e.target.value))} />
                   </L>
-                  <L label=\"Description\" ><input className=\"border rounded-lg px-3 py-2 md:col-span-5\" value={m1Desc} onChange={e=>setM1Desc(e.target.value)} /></L>
+                  <L label="Description"><input className="border rounded-lg px-3 py-2 md:col-span-5" value={m1Desc} onChange={e=>setM1Desc(e.target.value)} /></L>
                 </div>
               </Section>
             )}
@@ -558,17 +551,17 @@
                 {abilities.slice(0, abilityCount).map((a, i) => (
                   <div key={i} className="rounded-xl border border-stone-200 p-4">
                     <h3 className="font-semibold mb-3">{abilityLabels[i]} Ability</h3>
-                    <div className=\"grid md:grid-cols-3 gap-4\">
-                      <L label=\"Name\"><input className=\"border rounded-lg px-3 py-2\" value={a.name} onChange={e=>handleAbilityChange(i, 'name', e.target.value)} /></L>
-                      <L label=\"Cooldown (s)\"><input type=\"number\" step=\"0.1\" className=\"border rounded-lg px-3 py-2\" value={a.cd} onChange={e=>handleAbilityChange(i, 'cd', e.target.value)} /></L>
-                      <L label=\"Description\"><input className=\"border rounded-lg px-3 py-2\" value={a.desc} onChange={e=>handleAbilityChange(i, 'desc', e.target.value)} /></L>
+                    <div className="grid md:grid-cols-3 gap-4">
+                      <L label="Name"><input className="border rounded-lg px-3 py-2" value={a.name} onChange={e=>handleAbilityChange(i, 'name', e.target.value)} /></L>
+                      <L label="Cooldown (s)"><input type="number" step="0.1" className="border rounded-lg px-3 py-2" value={a.cd} onChange={e=>handleAbilityChange(i, 'cd', e.target.value)} /></L>
+                      <L label="Description"><input className="border rounded-lg px-3 py-2" value={a.desc} onChange={e=>handleAbilityChange(i, 'desc', e.target.value)} /></L>
                     </div>
-                    <div className=\"flex items-center gap-3 mt-2\">
-                      <input id=\"hasDamage-{i}\" type=\"checkbox\" className=\"h-4 w-4\" checked={a.hasDamage} onChange={e=>handleAbilityChange(i, 'hasDamage', e.target.checked)} />
-                      <label htmlFor=\"hasDamage-{i}\" className=\"text-sm\">This ability deals damage</label>
+                    <div className="flex items-center gap-3 mt-2">
+                      <input id={`hasDamage-${i}`} type="checkbox" className="h-4 w-4" checked={a.hasDamage} onChange={e=>handleAbilityChange(i, 'hasDamage', e.target.checked)} />
+                      <label htmlFor={`hasDamage-${i}`} className="text-sm">This ability deals damage</label>
                       {a.hasDamage && (
-                        <L label=\"Damage\">
-                          <input type=\"number\" step=\"1\" className=\"border rounded-lg px-3 py-2\" value={a.damage} onChange={e=>handleAbilityChange(i, 'damage', Number(e.target.value))} />
+                        <L label="Damage">
+                          <input type="number" step="1" className="border rounded-lg px-3 py-2" value={a.damage} onChange={e=>handleAbilityChange(i, 'damage', Number(e.target.value))} />
                         </L>
                       )}
                     </div>
@@ -605,11 +598,11 @@
             </Section>
 
             <Section title="Generated Template">
-              <div className=\"flex flex-wrap gap-3 mb-2\">
-                <button onClick={copyRich} className=\"px-4 py-2 rounded-lg bg-stone-900 text-white hover:opacity-90\">Copy (rich HTML)</button>
-                <button onClick={copyMarkdown} className=\"px-4 py-2 rounded-lg border border-stone-300 hover:bg-stone-100\">Copy (Markdown)</button>
-                <button onClick={copyToClipboard} className=\"px-4 py-2 rounded-lg border border-stone-300 hover:bg-stone-100\">Copy (plain)</button>
-                <button onClick={downloadTxt} className=\"px-4 py-2 rounded-lg border border-stone-300 hover:bg-stone-100\">Download .txt</button>
+              <div className="flex flex-wrap gap-3 mb-2">
+                <button onClick={copyRich} className="px-4 py-2 rounded-lg bg-stone-900 text-white hover:opacity-90">Copy (rich HTML)</button>
+                <button onClick={copyMarkdown} className="px-4 py-2 rounded-lg border border-stone-300 hover:bg-stone-100">Copy (Markdown)</button>
+                <button onClick={copyToClipboard} className="px-4 py-2 rounded-lg border border-stone-300 hover:bg-stone-100">Copy (plain)</button>
+                <button onClick={downloadTxt} className="px-4 py-2 rounded-lg border border-stone-300 hover:bg-stone-100">Download .txt</button>
               </div>
               <pre className="mono whitespace-pre-wrap bg-stone-900 text-stone-100 rounded-xl p-4 overflow-auto max-h-[50vh]">{output}</pre>
             </Section>
